close icon regression: incorrect location in the titlebar on Linux; themed variants also have odd styling
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox125 | --- | wontfix |
firefox126 | --- | wontfix |
firefox127 | --- | fixed |
People
(Reporter: garrett, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(6 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:125.0) Gecko/20100101 Firefox/125.0
Steps to reproduce:
Opened Firefox, looked at the titlebar.
Actual results:
The close button is not properly positioned, and in anything other than the default theme, has major issues including accessibility.
Expected results:
The titlebar should look correct and match all other windows with horizontal positioning, as it had before. And it should be possible to see the icons with custom themes while hovering.
It was never really superb, but it got worse in this most recent release (125).
Reporter | ||
Comment 1•5 months ago
|
||
Here's a comparison of what it should look like these days (GNOME has looked like this for the past couple years), with both visuals and spacing. The leftmost top two are Firefox with CSD, unhovered (default) above, and hovered the second down. Below and to the right are all GNOME titlebars for comparison.
Reporter | ||
Comment 2•5 months ago
|
||
Similar to the previous screenshot crops, this is a comparison with the old style of GNOME, which is what Firefox is trying to mimic. It's still quite a bit off.
As there is more vertical space around the button, there needs to be more horizontal space between the button and the rightmost edge of the window too, to be visually balanced. As you can see, Firefox not only does not have more space — it actually has less (by a pixel).
Reporter | ||
Comment 3•5 months ago
|
||
What's interesting is that GNOME Files (aka: Nautilus) has almost the same spacing as Firefox for the vertical height. It's an app with CSD window borders (versus the fallback ones I compared it to in the other screenshots). GNOME Files actually has 2 more pixels (1 above and 1 below), so it actually should serve as a good reference for where the close button should go.
This is basically how Firefox should look on Linux with regard to visuals and positioning, in other words. The grid lines from the sides and below show how far Firefox is off. (It's quite a bit.)
Assignee | ||
Comment 4•5 months ago
|
||
This is a regression from bug 1560702. See bug 1560702 comment 22 in particular about the context for the spacing change.
Assignee | ||
Comment 5•5 months ago
|
||
The dark / custom theme issue I can't reproduce, in nightly nor release, do you have any custom css that could affect that?
Assignee | ||
Comment 6•5 months ago
|
||
Updated•5 months ago
|
Updated•5 months ago
|
Assignee | ||
Comment 7•5 months ago
|
||
Account for button margins in our spacing computations. This doesn't
exactly match what gtk does (but we can't always match what gtk does
easily anyways), and is not so ridiculously complicated as the previous
approach.
Updated•5 months ago
|
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3dc13e07cf0b Slightly less outrageous approach. r=stransky
Comment 9•4 months ago
|
||
bugherder |
Updated•4 months ago
|
Comment 10•4 months ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox126
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Updated•4 months ago
|
Updated•4 months ago
|
Description
•