Bug 1891977 - Slightly less outrageous approach. r=stransky

Account for button margins in our spacing computations. This doesn't
_exactly_ match what gtk does (but we can't always match what gtk does
easily anyways), and is not so ridiculously complicated as the previous
approach.

Differential Revision: https://phabricator.services.mozilla.com/D207757